--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -6,6 +6,46 @@ Author URI: https://agenciasolary.com.br/
 Description: Construímos produtos intuitivos que atendem às necessidades dos usuários. Projetamos do 0, não utilizamos layouts prontos, cada produto é único e completo.
 Version: 1.0
 */
+
+// Responsive
+$container-xl: 1240px;
+$container-l: 1100px;
+$container-m: 960px;
+$container-s: 540px;
+
+// Responsividade
+@mixin responsive($device) {
+  @if $device == xl {
+    // For resolutions upper than 1240px
+    @media screen and (min-width: $container-xl) {
+      @content;
+    }
+  } @else if $device == l {
+    // For resolutions between 1140px and 1440px
+    @media screen and (max-width: $container-xl) and (min-width: $container-l) {
+      @content;
+    }
+  } @else if $device == m {
+    // For resolutions beetwen 960px and 1140px
+    @media screen and (max-width: $container-l) and (min-width: $container-m) {
+      @content;
+    }
+  } @else if $device == s {
+    // For resolutions less than 960px
+    @media screen and (max-width: $container-m) {
+      @content;
+    }
+  } @else if $device == xs {
+    // For resolutions less than 540px
+    @media screen and (max-width: $container-s) {
+      @content;
+    }
+  } @else {
+    @media screen and (max-width: $device) {
+      @content;
+    }
+  }
+}
 * {
   margin: 0;
   padding: 0;
