--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./elements/base/header";
 @import "./elements/base/footer";
 @import "./elements/base/swiper";
+@import "./elements/base/typo";
 
 // SVGS
 @import "./elements/svgs/svgs-keyframes";
