--- a/style.css
+++ b/style.css
@@ -541,6 +541,116 @@ footer {
     background: #7f62f4 !important;
   }
 }
+.h1 {
+  text-align: center;
+  font-weight: 300;
+  font-family: "Saira", sans-serif;
+  font-size: 3.5rem;
+  line-height: 4rem;
+}
+@media screen and (max-width: 960px) {
+  .h1 {
+    font-family: "Saira", sans-serif;
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
+}
+
+h2 {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 20px 0 35px 0;
+  font-family: "Saira", sans-serif;
+  font-size: 2.125rem;
+  line-height: 2.625rem;
+}
+@media screen and (max-width: 960px) {
+  h2 {
+    font-family: "Saira", sans-serif;
+    font-size: 1.15rem;
+    line-height: 2.125rem;
+  }
+}
+
+h3 {
+  font-weight: 700;
+  font-family: "Saira", sans-serif;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+}
+@media screen and (max-width: 960px) {
+  h3 {
+    font-family: "Saira", sans-serif;
+  }
+}
+
+h4 {
+  font-weight: 700;
+  font-family: "Saira", sans-serif;
+  font-size: 1.25rem;
+  line-height: 2rem;
+}
+@media screen and (max-width: 960px) {
+  h4 {
+    font-family: "Saira", sans-serif;
+  }
+}
+
+h5 {
+  font-weight: 700;
+  font-family: "Saira", sans-serif;
+  font-size: 1rem;
+  line-height: 2rem;
+}
+@media screen and (max-width: 960px) {
+  h5 {
+    font-family: "Saira", sans-serif;
+  }
+}
+
+h6 {
+  font-weight: 700;
+  position: relative;
+  z-index: 10;
+  font-family: "Saira", sans-serif;
+  font-size: 2.5rem;
+  line-height: 3rem;
+}
+@media screen and (max-width: 960px) {
+  h6 {
+    font-family: "Saira", sans-serif;
+    font-size: 1.875rem;
+    line-height: 2.125rem;
+  }
+}
+
+p {
+  font-weight: 400;
+  font-family: "Saira", sans-serif;
+  font-size: 1.25rem;
+  line-height: 200%;
+}
+@media screen and (max-width: 960px) {
+  p {
+    font-family: "Saira", sans-serif;
+    font-size: 1.125rem;
+    line-height: 2rem;
+  }
+}
+
+a {
+  font-family: "Saira", sans-serif;
+  font-size: 1.25rem;
+  line-height: 100%;
+}
+@media screen and (max-width: 960px) {
+  a {
+    font-family: "Saira", sans-serif;
+    font-size: 1.25rem;
+    line-height: 100%;
+  }
+}
+
 @-webkit-keyframes rotate {
   0% {
     -webkit-transform: rotate(0deg) translate(50px, 10px);
@@ -559,6 +669,7 @@ footer {
     transform: rotate(360deg) translate(100px, 30px);
   }
 }
+
 @keyframes rotate {
   0% {
     -webkit-transform: rotate(0deg) translate(50px, 10px);
