--- a/style.css
+++ b/style.css
@@ -166,41 +166,7 @@ img {
     margin: 0 auto;
   }
 }
-/*utilitários*/
-.btn__pri {
-  padding: 10px 20px;
-  gap: 8px;
-  background: var(--c0);
-  -webkit-box-shadow: 0px 4px 20px -10px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 4px 20px -10px rgba(0, 0, 0, 0.25);
-  font-weight: 700;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  text-align: center;
-}
-
-.btn__pri:hover {
-  -webkit-box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23), 0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865), 0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
-  box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23), 0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865), 0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
-}
-
-.btn__sec {
-  padding: 10px 20px;
-  border: 2px solid var(--c0);
-  -webkit-box-shadow: 0px 4px 25px -10px rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 4px 25px -10px rgba(0, 0, 0, 0.5);
-  background-color: var(--bg);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  text-align: center;
-}
-
-.btn__sec:hover {
-  -webkit-box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23), 0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865), 0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
-  box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23), 0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865), 0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
-  background-color: var(--c0);
-}
-
+/*UTILITÁRIOS*/
 .borda {
   border-radius: 16px;
 }
@@ -226,15 +192,7 @@ img {
   color: var(--c1);
 }
 
-@media (max-width: 800px) {
-  .btn__pri {
-    padding: 10px 16px;
-    width: 100%;
-  }
-  .btn__sec {
-    padding: 10px 16px;
-    width: 100%;
-  }
+@media screen and (max-width: 960px) and (max-width: 800px) {
   .sec__tit {
     grid-template-columns: 1fr;
     text-align: center;
@@ -244,6 +202,18 @@ img {
     margin-bottom: 1rem;
   }
 }
+.grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+}
+@media screen and (max-width: 960px) {
+  .grid-2 {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
+
 header {
   padding: 0.5rem 80px;
   font-family: "Mukta", sans-serif;
@@ -559,7 +529,6 @@ footer {
 h2 {
   font-weight: 700;
   text-transform: uppercase;
-  margin: 20px 0 35px 0;
   font-family: "Saira", sans-serif;
   font-size: 2.125rem;
   line-height: 2.625rem;
@@ -651,6 +620,50 @@ a {
   }
 }
 
+.btn__pri {
+  padding: 10px 20px;
+  gap: 8px;
+  background: var(--c0);
+  -webkit-box-shadow: 0px 4px 20px -10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 20px -10px rgba(0, 0, 0, 0.25);
+  font-weight: 700;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  text-align: center;
+}
+
+.btn__pri:hover {
+  -webkit-box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23), 0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865), 0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
+  box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23), 0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865), 0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
+}
+
+.btn__sec {
+  padding: 10px 20px;
+  border: 2px solid var(--c0);
+  -webkit-box-shadow: 0px 4px 25px -10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 4px 25px -10px rgba(0, 0, 0, 0.5);
+  background-color: var(--bg);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  text-align: center;
+}
+
+.btn__sec:hover {
+  -webkit-box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23), 0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865), 0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
+  box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23), 0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865), 0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
+  background-color: var(--c0);
+}
+
+@media screen and (max-width: 960px) {
+  .btn__pri {
+    padding: 10px 16px;
+    width: 100%;
+  }
+  .btn__sec {
+    padding: 10px 16px;
+    width: 100%;
+  }
+}
 @-webkit-keyframes rotate {
   0% {
     -webkit-transform: rotate(0deg) translate(50px, 10px);
@@ -669,7 +682,6 @@ a {
     transform: rotate(360deg) translate(100px, 30px);
   }
 }
-
 @keyframes rotate {
   0% {
     -webkit-transform: rotate(0deg) translate(50px, 10px);
