--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -199,42 +199,7 @@ img {
   }
 }
 
-/*utilitários*/
-.btn__pri {
-  padding: 10px 20px;
-  gap: 8px;
-
-  background: var(--c0);
-
-  box-shadow: 0px 4px 20px -10px rgba(0, 0, 0, 0.25);
-  font-weight: 700;
-  transition: 0.4s;
-  text-align: center;
-}
-
-.btn__pri:hover {
-  box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23),
-    0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865),
-    0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
-}
-
-.btn__sec {
-  padding: 10px 20px;
-
-  border: 2px solid var(--c0);
-  box-shadow: 0px 4px 25px -10px rgba(0, 0, 0, 0.5);
-  background-color: var(--bg);
-  transition: 0.4s;
-  text-align: center;
-}
-
-.btn__sec:hover {
-  box-shadow: 0px 61px 106px rgba(0, 0, 0, 0.23),
-    0px 18.3897px 31.9559px rgba(0, 0, 0, 0.149865),
-    0px 2.76257px 4.80053px rgba(0, 0, 0, 0.0801346);
-  background-color: var(--c0);
-}
-
+/*UTILITÁRIOS*/
 .borda {
   border-radius: 16px;
 }
@@ -259,24 +224,27 @@ img {
   color: var(--c1);
 }
 
-@media (max-width: 800px) {
-  .btn__pri {
-    padding: 10px 16px;
-    width: 100%;
+@include responsive(s){
+  @media (max-width: 800px) {
+    .sec__tit {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+    
+    .sec__tit h2 {
+      line-height: 100%;
+      margin-bottom: 1rem;
+    }
   }
+}
 
-  .btn__sec {
-    padding: 10px 16px;
-    width: 100%;
-  }
-
-  .sec__tit {
+// GRIDS
+.grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  @include responsive(s){
     grid-template-columns: 1fr;
-    text-align: center;
-  }
-
-  .sec__tit h2 {
-    line-height: 100%;
-    margin-bottom: 1rem;
+    gap: 20px;
   }
 }
