--- a/assets/css/scss/elements/secoes/inc/_metricas-parciais.scss
+++ b/assets/css/scss/elements/secoes/inc/_metricas-parciais.scss
@@ -36,3 +36,10 @@ button[type="submit"]:hover {
   border: 1px solid #ccc;
   padding: 10px;
 }
+
+.highlight {
+  background-color: #f5f5f5;
+  border-left: 5px solid #007bff;
+  padding: 10px;
+  margin-top: 20px;
+}
